--- a/CaseStudies/readme
+++ b/CaseStudies/readme
@@ -1,2 +1,2 @@
-1. Data science basic case studies. AND
-2. Some simple small programs.
+1. Data science case studies. AND
+2. Some useful programs.
