Updating multiple readme

--- a/dataScience/readme
+++ b/dataScience/readme
@@ -1,1 +1,4 @@
 Data science case studies.
+1. DNA Translation - Translates DNA and return the type of proteins with arrangement.
+2. Language processing - Process a book and return multiple data.
+3. Classification - classify the provided data.
