--- a/simplePrograms/readme
+++ b/simplePrograms/readme
@@ -1,1 +1,7 @@
 Some useful programs.
+1. cash - Counts denomination of cents to be returned to the client.
+2. countLetter - Count letters in a sentence, word or paragraph.
+3. creditCard - Check if the credit card number is valid and returning the name of issuing company.
+4. cypherCode - Takes a message and returns the message in coded form.
+5. cypherCodeDecode - Decodes the coded message.
+6. unitConverter - Convert units from one to another. 
