--- a/sampleDjangoProject/readme
+++ b/sampleDjangoProject/readme
@@ -1,3 +1,3 @@
-VijaySteel is a website, which was build using HTML, CSS, Javascript and python.
+sampleDjangoProject is a website, which was build using HTML, CSS, Javascript and python.
 It was build using Django framework.
 MYSQL was used for database creation and management.
