--- a/simplePrograms/readme
+++ b/simplePrograms/readme
@@ -7,4 +7,4 @@ Some useful programs.
 6. unitConverter - Convert units from one to another.
 7. scientificCalculator - Can be used to make scientific calculations.
 8. financialCalculation - programs for making financial calculations.
-9. A program using which you can find the number of ip addressess, which can be generated from a given string of numbers.
+9. FiguringCombinationOfIpadressFromAGivenString - A program using which you can find the number of ip addressess, which can be generated from a given string of numbers.
